# CurrencyAPP

./: .gitmodules  CMakeLists.txt  CurrencyApp.cpp  CurrencyApp.hpp  ReadMe.md  start.sh
test/: CMakeLists.txt  CurrencyAppTests.cpp
